--- a/classic-guild-bank/src/app/user/login.component.css
+++ b/classic-guild-bank/src/app/user/login.component.css
@@ -1,17 +1,16 @@
-.splash-screen {
-    width: 100%
+.splash-screen img {
+  width: 100%;
+  margin-top: -96px;
+  margin-left: -5px;
 }
 
-.splash-screen > img {
-    width: 100%;
-    margin-top: -100px;
-}
+​
 
 .cgb-art-credits {
-    text-align: center;
-    font-size: 10px;
-    margin-bottom: -16px;
-    margin-top: 8px;
+  text-align: center;
+  font-size: 10px;
+  margin-bottom: -16px;
+  margin-top: 8px;
 }
 
 :host /deep/ .modal-backdrop {
