--- a/classic-guild-bank/src/app/shared/header.component.html
+++ b/classic-guild-bank/src/app/shared/header.component.html
@@ -1,8 +1,8 @@
 <header class="header header-6">
     <div class="branding">
         <a href="javascript://" class="nav-link">
-            <img src="../../assets/normal-transparent.png" width="50px" height="50px" />
-            <span class="title cgb-header-title" style="margin-left: .5rem">Classic Guild Bank</span>
+            <img src="../../assets/normal-transparent.png" width="50" height="50" />
+            <span class="title cgb-header-title" style="margin-left: .5rem">Welcome Guild Bank</span>
         </a>
     </div>
     <!--<div class="header-nav cgb-header-nav">
