--- a/classic-guild-bank/src/app/user/password-callback.component.html
+++ b/classic-guild-bank/src/app/user/password-callback.component.html
@@ -1,7 +1,7 @@
 <div class="clr-row">
     <div class="card clr-col-12 clr-col-md-6 clr-col-lg-4 clr-offset-lg-4 clr-offset-md-3">
         <div class="card-header" style="display: flex; justify-content: center">
-            Classic Guild Bank Password Reset
+            Password Reset
         </div>
         <form clrForm [formGroup]="resetForm" (ngSubmit)="onSubmit()">
             <div class="clr-row clr-justify-content-center">
