--- a/classic-guild-bank/src/app/user/preferences.component.html
+++ b/classic-guild-bank/src/app/user/preferences.component.html
@@ -55,7 +55,7 @@
                 </clr-datagrid>
             </div>
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-header" style="display: flex; flex-direction:row">
                 API Token
             </div>
@@ -67,7 +67,7 @@
                     {{token}}
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
