--- a/classic-guild-bank/src/app/shared/header.component.html
+++ b/classic-guild-bank/src/app/shared/header.component.html
@@ -10,13 +10,13 @@
 
         <a href="https://www.curseforge.com/wow/addons/classic-guild-bank/download" target="_blank" class="nav-link nav-text">Get Addon</a>-->
 
-        <!-- <a href="https://github.com/ClassicGuildBank/ClassicGuildBank/archive/master.zip" target="_blank" class="nav-link nav-text">Get Addon</a> -->
-        <!--<a href="https://github.com/ClassicGuildBank/ClassicGuildBank/issues" target="_blank" class="nav-link nav-text">Report Bug</a>
+    <!-- <a href="https://github.com/ClassicGuildBank/ClassicGuildBank/archive/master.zip" target="_blank" class="nav-link nav-text">Get Addon</a> -->
+    <!--<a href="https://github.com/ClassicGuildBank/ClassicGuildBank/issues" target="_blank" class="nav-link nav-text">Report Bug</a>
     </div>-->
     <!--<div class="header-nav cgb-header-nav">
         <a href="https://www.patreon.com/user/posts?u=21632263" target="_blank" class="nav-link nav-text">Patreon</a>-->
-        <!-- <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=J44L65AWKA5B8&item_name=Classic+Guild+Bank+Donation&currency_code=USD&source=url" target="_blank" class="nav-link nav-text">Donate</a> -->
-        <!--<a href="javascript://" class="nav-link nav-text" (click)="toggleDonate(true)">Donate</a>
+    <!-- <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=J44L65AWKA5B8&item_name=Classic+Guild+Bank+Donation&currency_code=USD&source=url" target="_blank" class="nav-link nav-text">Donate</a> -->
+    <!--<a href="javascript://" class="nav-link nav-text" (click)="toggleDonate(true)">Donate</a>
     </div>-->
     <div class="header-actions">
         <ng-container *ngIf="!readonly">
@@ -26,8 +26,9 @@
                     <clr-icon shape="caret down"></clr-icon>
                 </button>
                 <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-                    <a clrDropdownItem *ngFor="let guild of (guilds$ | async)" (click)="onGuildSelected(guild)">{{guild.name}}</a>
-                    <a clrDropdownItem (click)="addGuildClick()">Add New Guild...</a>
+                    <a clrDropdownItem *ngFor="let guild of (guilds$ | async)"
+                        (click)="onGuildSelected(guild)">{{guild.name}}</a>
+                    <!-- <a clrDropdownItem (click)="addGuildClick()">Add New Guild...</a> -->
                 </clr-dropdown-menu>
             </clr-dropdown>
 
@@ -50,7 +51,8 @@
                 <clr-icon shape="caret down"></clr-icon>
             </button>
             <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-                <a *ngFor="let wh of wowheadUrls" clrDropdownItem (click)="changeLanguage(wh.language)">{{wh.language}}</a>
+                <a *ngFor="let wh of wowheadUrls" clrDropdownItem
+                    (click)="changeLanguage(wh.language)">{{wh.language}}</a>
             </clr-dropdown-menu>
         </clr-dropdown>
     </div>
