--- a/classic-guild-bank/src/app/shared/import-from-addon.component.html
+++ b/classic-guild-bank/src/app/shared/import-from-addon.component.html
@@ -11,9 +11,11 @@
                 <form clrForm class="cgb-import-form" [formGroup]="addonImportForm">
                     <div class="clr-control-container">
                         <div class="clr-textarea-wrapper">
-                            <textarea id="textarea-basic-error" placeholder="Paste string from CGB addon. While your bank is open, type chat command /cgb to generate the string." class="clr-textarea" formControlName="importText"></textarea>
+                            <textarea id="textarea-basic-error"
+                                placeholder="Paste string from CGB addon. While your bank is open, type chat command /cgb to generate the string."
+                                class="clr-textarea" formControlName="importText"></textarea>
                         </div>
-                    </div>                      
+                    </div>
                 </form>
             </div>
             <clr-alert *ngIf="errorText" [clrAlertType]="'danger'">
@@ -25,7 +27,9 @@
             <div class="modal-footer">
                 <ng-container>
                     <button type="button" class="btn btn-outline" (click)="closeImportAddonModal()">Cancel</button>
-                    <button class="btn btn-primary" type="submit" [disabled]="!addonImportForm.valid || uploadingImportString" (click)="onSubmit()">Import</button>
+                    <button class="btn btn-primary" type="submit"
+                        [disabled]="!addonImportForm.valid || uploadingImportString"
+                        (click)="onSubmit()">Import</button>
                 </ng-container>
             </div>
         </div>
