--- a/classic-guild-bank/src/app/user/login.component.css
+++ b/classic-guild-bank/src/app/user/login.component.css
@@ -1,26 +1,10 @@
 .splash-screen img {
   width: 100%;
-  margin-top: -96px;
-  margin-left: -5px;
-}
-
-.cgb-art-credits {
-  text-align: center;
-  font-size: 10px;
-  margin-bottom: -16px;
-  margin-top: 8px;
-}
-
-:host /deep/ .modal-backdrop {
-    background-color: rgba(0,0,0,.25);
+  height: 100%;
 }
 
 @media screen and (max-width: 576px) {
-    .splash-screen {
-        display: none;
-    }   
-
-    .cgb-art-credits {
-        display: none;
-    } 
+  .splash-screen {
+    display: none;
+  }
 }
